--- a/src/App.css
+++ b/src/App.css
@@ -6,17 +6,22 @@ body {
   background-color: #fff;
   color: #202124;
   font-size: 15px;
-  margin: 0;
-  min-width: 360px;
-  overflow-x: hidden;
+  margin: 0 auto;
+  max-width: 100%;
   overflow-y: auto;
-  padding: 0;
+  padding: 1em;
   font-family: "Google Sans", sans-serif;
 }
 
 header{
   text-align: center;
   padding-top: 2em;
+}
+
+button{
+  border: 0;
+  background: transparent;
+  cursor: pointer;
 }
 
 .header-logo {
@@ -38,7 +43,6 @@ header{
   width: 100%;
   height: 100%;
   background-color: rgba(229, 229, 229, 0.5);
-  /* opacity: ; */
   transform: scale(1.1);
   /* transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s; */
 }
@@ -52,29 +56,10 @@ header{
   transform: translate(-50%, -50%);
   background-color: white;
   padding: 1rem 1.5rem;
-  width: 24rem;
+  max-width: 24rem;
   border-radius: 0.5rem;
 }
 
-.modal-close-button {
-  float: right;
-  margin: 0.2em 0;
-  box-sizing: border-box;
-  color: rgba(0, 0, 0, 0.87);
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  letter-spacing: 0.01785714em;
-  font-size: 1rem;
-  font-weight: 500;
-  line-height: 1.25rem;
-  height: 36px;
-  padding: 8px 24px;
-  border-radius: 4px;
-  border-color: transparent !important;
-  background-color: rgb(251, 251, 251);
-  cursor: pointer;
-}
 
 .modal-title,
 .modal-body{
@@ -96,37 +81,29 @@ header{
 }
 .modal-body {
   padding: 10px 10px;
+  font-family: inherit;
   font-size: 1rem;
   padding: 4px 16px 12px 0px;
 }
 
-.modal-close-button:hover {
-  background-color: rgba(95, 99, 104, 0.039);
-}
+
 .form-container {
   border-radius: 8px;
   border: 0.5px solid #d3d3d3;
   box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302),
     0 2px 6px 2px rgba(60, 64, 67, 0.149);
-  margin: 32px auto 16px auto;
+  margin: 4em auto 2em auto;
+  width: 90%;
   max-width: 496px;
   transition-duration: 0.218s;
   transition-property: background, border, opacity, box-shadow, transform;
   transition-timing-function: ease-in;
 }
 
-.form {
-  position: relative;
-  border: none;
-  margin: 1px;
-  border-radius: 8px;
-  transition-duration: 0.218s;
-  transition-property: background, border, opacity, box-shadow, transform;
-  transition-timing-function: ease-in;
-}
+
 .form-title,
 .form-body{
-  width: calc(100% - 10px);
+  width: calc(100% - 20px);
   min-height: 43px;
   margin: 0 5px;
   padding: 10px 10px;
@@ -146,7 +123,8 @@ input:focus {
   outline: none;
 }
 
-.form-buttons {
+.form-buttons,
+.modal-buttons {
   text-align: right;
   display: flex;
   gap: 0.7em;
@@ -154,8 +132,8 @@ input:focus {
   margin: 0.7em;
 }
 
-.submit-button,
-.form-close-button {
+.save-button,
+.close-button {
   margin: 0.2em 0;
   box-sizing: border-box;
   color: rgba(0, 0, 0, 0.87);
@@ -173,14 +151,18 @@ input:focus {
   background-color: rgb(251, 251, 251);
 }
 
-.submit-button {
+.save-button {
   color: #fff;
-  background-color: #007bff;
+  background-color:rgb(60, 64, 67);
 }
 
-.submit-button:hover,
-.form-close-button:hover {
-  filter: brightness(95%);
+.save-button:hover,
+.save-button:focus {
+  opacity: 0.8;
+}
+.close-button:hover,
+.close-button:focus{
+  border: 1px solid #252525;
 }
 
 
@@ -201,7 +183,6 @@ input:focus {
   background-color: #fff;
   border-color: #e0e0e0;
   border: 1px solid #d3d3d3;
-  box-sizing: border-box;
   /* overflow: hidden; */
   position: relative;
   border-radius: 8px;
@@ -233,7 +214,8 @@ input:focus {
 }
 
 .small{
-  font-size: 0.6rem;
+  font-size: 0.75rem;
+  
 }
 .note-buttons{
   display: flex;
@@ -241,11 +223,13 @@ input:focus {
 }
 .note-button{
   border: none;
-  background-color: white;
-  border: 1px solid #252525;
-  padding: 0.5em 1.5em;
-  border-radius: 5px;
   color: #252525;
+  font-size: 1.5rem;
+  margin-top: 0.5em;
+}
+.note-button:hover,
+.note-button:focus{
+  color: #d3d3d3;
 }
 
 .toolbar-color {
@@ -261,7 +245,7 @@ input:focus {
 .color-tooltip {
   border-bottom: 2px solid #fff;
   position: absolute;
-  bottom: -2em;
+  bottom: -1em;
   background: #fff;
   border: 1px solid black;
   right: 0;
@@ -287,7 +271,7 @@ input:focus {
 }
 
 .white {
-  background: white;
+  background: #fff;
 }
 
 .purple {
@@ -295,11 +279,11 @@ input:focus {
 }
 
 .orange {
-  background: #fbbc04;
+  background: #fbd0d0;
 }
 
 .teal {
-  background: #a7ffeb;
+  background: #b2e2e6;
 }
 
 
